--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,10 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.0'
     testCompile 'junit:junit:4.12'
+
+    //Firebase
+    compile 'com.google.firebase:firebase-auth:10.0.1'
+    compile 'com.firebaseui:firebase-ui-auth:1.1.1'
+    compile 'com.google.firebase:firebase-database:10.0.1'
 }
 apply plugin: 'com.google.gms.google-services'
