--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,7 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.firebaseui:firebase-ui-auth:1.1.1'
     compile 'com.google.firebase:firebase-database:10.0.1'
+
+    compile 'com.github.delight-im:Android-SimpleLocation:v1.0.1'
 }
 apply plugin: 'com.google.gms.google-services'
